...
        android:background="@color/dark_background"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_locations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar_locations"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/locations_item" />

...
