...

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_weather_forecast"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:visibility="invisible"
                tools:visibility="visible">
...
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        tools:src="@drawable/forecast_day_sunny"
                        android:tint="@color/dark_icon_1"/>

                    <TextView
                        android:id="@+id/text_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_text_1"
                        android:textSize="56sp"
                        tools:text="26\u00B0C"/>

...
