<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_item_background"
    android:foreground="?attr/selectableItemBackground"
    android:id="@+id/layout_search_item">

    <TextView
        android:id="@+id/location_text_place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/dark_text_1"
        android:layout_marginTop="8dp"
        android:paddingStart="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Nottingham">
    </TextView>

    <TextView
        android:id="@+id/location_text_region_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/dark_text_2"
        android:paddingBottom="4dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/location_text_place_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/separator"
        tools:text="England, UK">
    </TextView>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/location_text_region_name"
        android:background="#cbcbcb"/>

</androidx.constraintlayout.widget.ConstraintLayout>